oasis-macros/tests/ui/no_service_impl.stderr
error: Missing implementation for `Counter::new`.
 --> $DIR/no_service_impl.rs:5:16
  |
5 |     pub struct Counter(u32);
  |                ^^^^^^^

error: aborting due to previous error

